--- a/code/style.css
+++ b/code/style.css
@@ -1,21 +1,294 @@
-html {
-  background: #bdc5ee;
-  color: #fff;
-}
-header{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap');
+
+:root {
+  --background: rgb(#f8f8ff);
 }
 
-ul {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  justify-items: center;
-  list-style-type: none;
+html {
+  background:var(--background);
+  color: #111;
+  font-family: 'Kaisei Decol', Arial, Helvetica;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing:border-box;
+}
+
+body {
+  margin: 0;
+}
+header {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  background:var(--background);
+  z-index: 999;
+}
+
+p, h2 {
+  margin: 0;
+}
+
+nav {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 100%;
+  background:var(--background);
+  text-align: end;
+  transform: scale(1,0);
+  transform-origin: top;
+  transition: transform 400ms ease-in-out;
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: 900;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.logo img {
+  width: 75px;
+}
+.logo-text{
+  display: none;
+}
+
+/* menu */
+nav ul {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
-/* .nav {
+
+nav li{
+  margin-bottom: 1em;
+  margin-right: 1em;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  text-transform: uppercase;
+  opacity: 0;
+}
+
+nav a:hover {
+  color: aquamarine;
+}
+
+.nav-toggle:checked ~ nav {
+  transform: scale(1,1);
+}
+
+.nav-toggle:checked ~ nav a {
+  opacity: 1;
+  transition: opacity 250ms ease-in-out 250ms;
+}
+
+/* Hamburger menu */
+
+.nav-toggle {
+  display: none;
+}
+
+.nav-toggle-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 1em;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label::before,
+.nav-toggle-label::after {
+  display: block;
+  background: black;
+  height: 2px;
+  width: 1.5em;
+  border-radius: 5px;
+  position: relative;
+}
+
+.nav-toggle-label::before,
+.nav-toggle-label::after {
+  content: "";
+  position: absolute;
+}
+
+.nav-toggle-label::before {
+  bottom: 58px;
+}
+
+.nav-toggle-label::after {
+  top: 58px;
+}
+
+.space{
+  height: 80px;
+}
+
+/* End of navbar
+
+  Section big news starts */
+
+.hero {
+  background: url(../Thailand.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 40vh;
+}
+
+.big-news {
   display: grid;
-  grid-template-columns: repeat(4, minmax(100px, 1fr));
+  grid-row-gap: 10px;
+  padding: 20px 20px;
+  text-align: center;
+  min-height: 50vh;
+  background-color: var(--background);
+}
+
+.big-news h1 {
+  font-size: 30px;
+}
+
+.big-news p {
+  font-size: 20px;
+  padding: 0 30px;
+}
+
+.big-news img {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 4px 8px 0 rgba(206, 171, 171, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+.news-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-column-gap: 40px;
+  align-items: stretch;
+  grid-row-gap: 40px;
+  margin: 20px 20px;
+}
+
+/* .card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  height: 200px;
 } */
+
+.card img {
+max-width: 100%;
+
+  /* object-fit: cover;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+  margin-bottom: 5px; */
+}
+
+.text {
+  padding: 0 20px 20px;
+  text-align: center;
+}
+
+.text a {
+  text-decoration: none;
+  font-size: 18px;
+  color: #111;
+  font-weight: 500;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr, minmax(600px,1fr), 1fr;
+  color: rgb(136, 124, 124);
+  font-size: 14px;
+  padding: 30px 0;
+}
+
+footer p {
+  grid-column: 2/3;
+}
+
+footer span {
+  color: red;
+}
+
+/* this is for desktop */
+@media screen and (min-width: 900px) {
+  .nav-toggle-label {
+    display: none;
+  }
+
+  header {
+    display: grid;
+    grid-template-columns: .5fr auto minmax(600px, 1fr);
+  }
+
+  .logo {
+    display: flex;
+    align-items: center;
+    grid-column: 1/2;
+  }
+
+  .logo-text{
+    display: block;
+  }
+
+  nav {
+    color: black;
+    all:unset;
+    grid-column: 3/4;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  nav ul {
+    display: flex;
+  }
+  nav li {
+    margin-right: 3em;
+    margin-bottom: 0;
+  }
+
+  nav a {
+    opacity: 1;
+    font-weight: 500;
+  }
+
+  .big-news {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+
+  .news-cardsnews-cards {
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
+  }
+}
+
+/* this is for tablet */
+@media screen and (min-width: 768px) {
+  .news-cards {
+    grid-template-columns: 1fr 1fr;
+
+  }
+}
+
+
+
+
+
