--- a/code/style.css
+++ b/code/style.css
@@ -4,7 +4,7 @@ body {
   background: #f7e1d3;
 }
 
-p, h1, h2 {
+p, h1, h2, h3, h4 {
   text-align: center;
 }
 
@@ -31,9 +31,7 @@ img.rounded-corners {
 }
 
 .page-title {
-  display:inline-block;
-  font-size: 60px;
-  align-items: left;
+  display:none;
 }
 
 nav {
@@ -62,24 +60,22 @@ a:hover {
 
 .big-news {
   background: #f5d2d3;
-  display: block;
+  display: flex;
+  flex-direction:column;
   margin: 10px;
   padding: 20px;
-  width: 90%;
+  width: 80%;
   border-style: solid;
   border-width: 3px;
   border-color: lavenderblush;
 }
 
-h2{
-  display: inline-block; 
-}
 
 .bignews-img{
-  display: flex;
+  display: inline-block;
   justify-content: center;
   width: 80%;
-   height: 400px;
+   height: 80%;
    margin: 0 auto;
 }
 
@@ -88,7 +84,6 @@ h2{
   margin: 5px;
   width: 80%; 
   font-size: 18px;
-  
 }
 
 .small-news{
@@ -125,35 +120,34 @@ h2{
   text-align: space-between;
 }
 
-@media only screen and (min-width:599px) { 
-  .grid-container{
-    width: 50%;
-  }
-
-  .small-news{
-    width: 50%; 
+@media only screen and (min-width:668px) { 
+  body{
     flex-direction: row;
-
-
   }
+  
+  .page-title{
+    display: inline-block;
+    font-size: 60px;
+    align-items: center; 
+  }
+  
+  .news {
+    width: 40%; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: space-between;
+   }
 
   }
   
 
-  @media only screen and (min-width:768px) {
+  @media only screen and (min-width:1024px) {
     .grid-container{
-      width: 25%;
+      width: 100%;
     }
 
-      
-      .big-news {
-       display: flex;
-       width: 100%;
-      }
-
-    .bignews-text {
-      display: block;
+     .news {
+       width: 20%;
+     } 
     
-    }
-
-  }
+      }
