update path for imgs

--- a/code/style.css
+++ b/code/style.css
@@ -140,7 +140,7 @@ nav a:hover {
   Section big news starts */
 
 .hero {
-  background: url(../Thailand.jpg);
+  background: url(./Thailand.jpg);
   background-position: center;
   background-size: cover;
   height: 40vh;
