--- a/code/style.css
+++ b/code/style.css
@@ -178,27 +178,18 @@ nav a:hover {
 
 .news-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
+  grid-template-columns: 1fr;
   grid-column-gap: 40px;
   align-items: stretch;
   grid-row-gap: 40px;
   margin: 20px 20px;
 }
 
-/* .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  height: 200px;
-} */
 
 .card img {
 max-width: 100%;
 
-  /* object-fit: cover;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
-  margin-bottom: 5px; */
 }
 
 .text {
@@ -275,13 +266,13 @@ footer span {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 
-  .news-cardsnews-cards {
+  .news-cards {
     grid-template-columns: repeat(4, minmax(200px, 1fr));
   }
 }
 
 /* this is for tablet */
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .news-cards {
     grid-template-columns: 1fr 1fr;
 
