--- a/code/style.css
+++ b/code/style.css
@@ -126,7 +126,7 @@ a.inline-link {
 }
 
 .big-news-small-img {
-  width: 200px;
+  width: 275px;
 }
 
 .spotlight {
@@ -182,6 +182,7 @@ a.blank-link:visited {
 a.blank-link2 {
   color: black;
   letter-spacing: 0;
+  padding: 10px;
 }
 
 a.blank-link2:visited {
@@ -200,7 +201,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   background-color: peachpuff;
-  height: 100px;
+  height: 150px;
   padding: 40px;
 }
 
@@ -263,11 +264,11 @@ i {
   }
 
   footer {
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .footer-logo {
-    width: 100px;
+    width: 150px;
   }
 }
 
