--- a/code/style.css
+++ b/code/style.css
@@ -83,7 +83,7 @@ a:before, a:after, a > span:before, a > span:after {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: 7em auto;
+  margin: 0 0 20em 0;
 }
 
 .mobile-big-news-image {
