--- a/code/style.css
+++ b/code/style.css
@@ -268,7 +268,7 @@ footer span {
   }
 
   .news-cards {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
   }
 }
 
