--- a/code/style.css
+++ b/code/style.css
@@ -85,7 +85,6 @@ display: flex;
   border-radius: 5%;
   height: 200px;
   border:2px solid #fff;
-  background: url(img/tiger.png) no-repeat;
   box-shadow: 10px 10px 5px #ccc;
   -moz-box-shadow: 10px 10px 5px #ccc;
   -webkit-box-shadow: 10px 10px 5px #ccc;
@@ -108,6 +107,7 @@ display: flex;
   margin: 10px;
 }
 
+/*Bouncing logo*/
 @keyframes logobounce {
   0%   { transform: scale(1,1)      translateY(0); }
   10%  { transform: scale(1.1,.9)   translateY(0); }
@@ -141,7 +141,6 @@ h1 {
 h2 {
   font-size: 30px;
   padding: 2px;
-  height: 30px;
   cursor: pointer;
 }
 
@@ -252,7 +251,7 @@ footer {
     grid-column: span 1;
     display: grid;
     flex-direction: column;
-    justify-content: center;
+    
   
   }
 
