--- a/code/style.css
+++ b/code/style.css
@@ -2,14 +2,13 @@
 
 html {
     scroll-behavior: smooth;
-    height: 100vw;
+    height: 100vh;
 }
 
 body {
     background: moccasin;
     font-family: 'Nunito', sans-serif;
     margin: 0 auto;
-    max-width: 1280px;
 }
 
     /* remove the bullet points and padding */
@@ -39,11 +38,15 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
+    background-color: indianred;
 }
 
     /* using flexbox for the navigation */
 nav > ul {
     display: flex;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
     /* list items equally sized */
@@ -97,6 +100,12 @@ main {
 
 .welcome > article > p {
     text-align: justify;
+}
+
+.articles {
+    max-width: 1280px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
     /* using grid for the articles
