--- a/code/resources/css/style.css
+++ b/code/resources/css/style.css
@@ -189,6 +189,8 @@ h3 {
     background-color: #fff;
     box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
     transition: .5s ease;
+    display: grid;
+    grid-row-gap: 15px;
   }
 
   .featured-grid > article:hover {
