--- a/code/style.css
+++ b/code/style.css
@@ -1,30 +1,26 @@
+/* 
+This CSS file is created with mobile first in mind.
+Desktop and Tablet is added at the bottom under media sections.
+Author Jenny Quach
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap');
 
-:root {
-  --background: rgb(#f8f8ff);
-}
-
 html {
-  background:var(--background);
   color: #111;
   font-family: 'Kaisei Decol', Arial, Helvetica;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing:border-box;
+body {
+  margin: 0; /* to be able to reach corners */
+  background-color: #f8f8ff;
 }
 
-body {
-  margin: 0;
-}
 header {
   text-align: center;
-  position: absolute;
+  position: absolute; /* fixed position of header */
   width: 100%;
-  background:var(--background);
-  z-index: 999;
+  z-index: 999; /* always visible */
 }
 
 p, h2 {
@@ -32,15 +28,12 @@ p, h2 {
 }
 
 nav {
-  position: absolute;
-  top: 100%;
+  position: absolute; /* fixed position to the right */
   right: 0;
-  width: 100%;
-  background:var(--background);
   text-align: end;
-  transform: scale(1,0);
+  transform: scale(1,0); /* full width zero height */
   transform-origin: top;
-  transition: transform 400ms ease-in-out;
+  transition: transform 400ms ease-in-out; /* transition takes 400ms and the menu opens from top to bottom */
 }
 
 .logo {
@@ -54,14 +47,15 @@ nav {
   width: 75px;
 }
 .logo-text{
-  display: none;
+  display: none; /* name not displayed on mobile screen */
 }
 
 /* menu */
+
 nav ul {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style: none; /* to remove the bullets */ 
 }
 
 nav li{
@@ -81,19 +75,19 @@ nav a:hover {
   color: aquamarine;
 }
 
+/* Hamburger menu */
+
 .nav-toggle:checked ~ nav {
-  transform: scale(1,1);
+  transform: scale(1,1); /* full width full height */
 }
 
 .nav-toggle:checked ~ nav a {
-  opacity: 1;
-  transition: opacity 250ms ease-in-out 250ms;
+  opacity: 1; /* makes links visible */
+  transition: opacity 200ms ease-in-out 200ms; /* transition time and delay time */ 
 }
 
-/* Hamburger menu */
-
 .nav-toggle {
-  display: none;
+  display: none; /* hide checkbox */
 }
 
 .nav-toggle-label {
@@ -102,8 +96,8 @@ nav a:hover {
   right: 0;
   margin-right: 1em;
   height: 100%;
-  display: flex;
-  align-items: center;
+  display: flex; 
+  align-items: center; /* to center align vertically */
 }
 
 .nav-toggle-label span,
@@ -111,24 +105,24 @@ nav a:hover {
 .nav-toggle-label::after {
   display: block;
   background: black;
-  height: 2px;
+  height: 1px;
   width: 1.5em;
   border-radius: 5px;
   position: relative;
 }
 
-.nav-toggle-label::before,
+.nav-toggle-label::before, 
 .nav-toggle-label::after {
-  content: "";
-  position: absolute;
+  content: ""; /* setting content to nothing for pseudoclasses */
+  position: absolute; 
 }
 
 .nav-toggle-label::before {
-  bottom: 58px;
+  bottom: 50px;
 }
 
 .nav-toggle-label::after {
-  top: 58px;
+  top: 50px;
 }
 
 .space{
@@ -149,10 +143,9 @@ nav a:hover {
 .big-news {
   display: grid;
   grid-row-gap: 10px;
-  padding: 20px 20px;
+  padding: 20px 20px; /* 20px top and bottom 20px left and right */
   text-align: center;
-  min-height: 50vh;
-  background-color: var(--background);
+  min-height: 30vh; /* for responsiveness */
 }
 
 .big-news h1 {
@@ -190,7 +183,6 @@ nav a:hover {
 
 .news-cards {
   display: grid;
-  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
   grid-template-columns: 1fr;
   grid-column: span 1;
   grid-column-gap: 40px;
@@ -203,10 +195,8 @@ nav a:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
-
 .card img {
 max-width: 100%;
-
 }
 
 footer {
@@ -226,6 +216,7 @@ footer span {
 }
 
 /* this is for desktop */
+
 @media screen and (min-width: 901px) {
   .nav-toggle-label {
     display: none;
