--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+html {
+  min-width: 320px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -22,9 +26,10 @@ body {
   display: none;
 }
 
-h3 {
+h1 {
   margin-bottom: 4px;
   margin-top: 0px;
+  font-size: 20px;
 }
 
 a {
@@ -228,9 +233,7 @@ a:hover {
     height: auto;
   }
 
-  .item-2,
-  .item-4,
-  .item-6 {
+  .item-reverse {
     flex-direction: column-reverse;
   }
 
@@ -316,9 +319,7 @@ a:hover {
     margin-top: 10px;
   }
 
-  .item-2,
-  .item-4,
-  .item-6 {
+  .item-reverse {
     flex-direction: column-reverse;
   }
 
