--- a/code/style.css
+++ b/code/style.css
@@ -84,7 +84,7 @@ button {
 
 .small-news-article {
   display: flex;
-  flex-direction: column
+  flex-direction: column;
   height: 250px;
   padding: 5px;
   column-gap: 2px;
