--- a/code/style.css
+++ b/code/style.css
@@ -57,6 +57,10 @@ header {
   border-radius: 0.2cm;
 }
 
+.big-news:hover {
+  background-color: darkgray;
+}
+
 .big-news-image {
   overflow: hidden;
   border-radius: 0.2cm;
@@ -91,6 +95,10 @@ button {
   background-color: whitesmoke;
   border-radius: 0.2cm;
   font-size: 0.3cm;
+}
+  
+.small-news-article:hoover {
+  background-color: lightgray;
 }
 
 .photo-small-news {
