added classes for headlines and paragraphs

--- a/code/style.css
+++ b/code/style.css
@@ -21,29 +21,31 @@ header {
   height: 100px;
 }
 
-h1 {
+.headline-big-news {
   font-family: 'Inter', sans-serif;
   font-size: 30px;
   font-weight: 800;
   margin: 10px 10px 3px 10px;
 }
 
-h2 {
+.headline-news-cards {
   font-family: 'Inter', sans-serif;
   font-size: 22px;
+  font-weight: 800;
   margin: 10px 10px 3px 10px;
 }
 
-h4 {
-  margin: 5px 10px;
+.subheadline {
+  margin: 5px 8px;
   font-family: 'Inter', sans-serif;
   font-size: 13px;
   font-weight: 600;
 }
 
-p {
+.paragraph {
   font-family: 'Oxygen', sans-serif;
-  font-size: 14px;
+  font-size: 13.5px;
+  line-height: 1.3;
   margin: 0px 10px 15px 10px;
 }
 
